# Nomercy-Module-Validator

./: CMakeLists.txt  LICENSE  build.bat
lib/: CMakeLists.txt
lib/include/: NoMercyValidator.h
lib/src/: main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
